
[package]
name = "cmasfo-dev"
version = "0.0.32"
edition = "2021"
description = "cmasfo dev dependency"
license = "MIT"
documentation = "https://docs.rs/crate/cmasfo-dev/latest"
homepage = "https://github.com/cmasfo"
repository = "https://github.com/cmasfo/cmasfo-dev"

[dependencies]

[[bin]]
name = "cmasfo"
path = "src/main.rs"
